--- a/alumnos/CristianCasa/FRONTEND/JavaS2608/index.html
+++ b/alumnos/CristianCasa/FRONTEND/JavaS2608/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div>
-        <h1>Mi pagina para cargar datos</h1>
-        <p>Bienvenido a mi pagina. Aquí puedes agregar y limpiar mensajes.</p>
+        <h1>Cargar Mensajes</h1>
+        <p>Aquí puedes agregar y limpiar mensajes.</p>
     </div>
 
     <div class="contenedor"></div>
